# UIR

main_task/: CMakeLists.txt  test_data.csv
main_task/0.10/: csv_parser.h  function.h  main.cpp  test.cpp
main_task/0.10/space/: .combinator.h.swp  a.out  combinator.h  init.h  part_of_function.h  point.h  test.cpp  vector.h
main_task/Tests/: CMakeLists.txt  test.cpp
main_task/program/: csv_parser.h  function.h  local_main.cpp  main.cpp
main_task/program/config/: config.h.in
main_task/program/headers/: csv_parser.h  function.h  log.h
main_task/program/sources/: csv_parser.cpp  function.cpp  log.cpp
main_task/program/space/: combinator.h  init.h  metrics.h  part_of_function.h  point.h  rotate.h  test.cpp  vector.h  velocity.h
main_task/program/space/functions/: part_of_function.h  rotate.h  velocity.h
main_task/program/space/functions/headers/: combinator.h  part_of_function.h  rotate.h  velocity.h
main_task/program/space/functions/sources/: combinator.cpp  part_of_function.cpp  rotate.cpp  velocity.cpp
main_task/program/space/geometrics/: metrics.h  point.h  vector.h
main_task/program/space/geometrics/headers/: bz_curve.h  circle.h  line.h  metrics.h  plane.h  point.h  sphere.h  trans_matrix.h  vector.h  xy_circle.h
main_task/program/space/geometrics/sources/: bz_curve.cpp  circle.cpp  line.cpp  metrics.cpp  plane.cpp  point.cpp  sphere.cpp  trans_matrix.cpp  vector.cpp  xy_circle.cpp
pract_task/: CMakeLists.txt  test_data.csv
pract_task/program/headers/: csv_parser.h  function.h
pract_task/program/sources/: function.cpp
pract_task/program/space/functions/headers/: combinator.h  part_of_function.h
pract_task/program/space/functions/sources/: combinator.cpp  part_of_function.cpp  rotate.cpp
pract_task/program/space/geometrics/headers/: metrics.h  point.h  sphere.h  vector.h
pract_task/program/space/geometrics/sources/: point.cpp  sphere.cpp
test_task/: a.out  main.cpp  plane.h  point.h  sphere.h
